--- a/src/pages/contact/ContactComponent.css
+++ b/src/pages/contact/ContactComponent.css
@@ -3,14 +3,9 @@
 }
 
 .basic-contact {
-  margin-left: 5%;
-  margin-right: 5%;
-  padding-top: 2rem;
   max-width: 1120px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  margin: 0 auto;
+  padding: 2rem 1.5rem 4rem;
 }
 
 .contact-heading-div {
@@ -239,6 +234,21 @@
   .blog-heading-text {
     font-size: 50px;
     margin-top: 40px;
+  }
+}
+
+/* Small screens: same horizontal padding as Experience (no gap from screen edge) */
+@media (max-width: 768px) {
+  .basic-contact {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .basic-contact {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 }
 
